# Masoudy-Dictionary

./: README.md
MasoudyDictionary_Development/: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  app.manifest  architecture.txt  build_production.sh  build_professional.sh  build_windows.bat  build_windows.ps1  build_windows_cross.sh  build_windows_from_mac.sh  build_windows_production.bat  build_windows_simple.sh  compile_commands.json  config_sample.ini  package.json  version.txt
MasoudyDictionary_Development/.cache/clangd/index/: login_dialog.cpp.49767B17B8EEFC3C.idx  login_dialog.h.741A4CF9743A04EE.idx  main.cpp.591CADA34E25FC70.idx  main_frame.cpp.48619F9A66619F21.idx  main_frame.h.6F919242FE7CDB55.idx  masoudy_app.cpp.430610F8FE2038CB.idx  masoudy_app.h.6312CE1A98670981.idx  masoudy_core.h.CB357327BB5A9C88.idx  memory_protection.h.CB6AA3980965D2C8.idx  menu_bar.cpp.187BE4894BA4AC59.idx  menu_bar.h.55A8D923F633B36F.idx  network_scanner.h.B60ECC63E346B1C2.idx  network_scanner_dialog.cpp.06554D9F529AEC18.idx  network_scanner_dialog.h.CCFEBB140E20C849.idx  screen_sharing_panel.cpp.CB0F058EF96717FC.idx  screen_sharing_panel.h.9C4FC6538A243CAA.idx  settings_panel.cpp.80AD1E98DC99F907.idx  settings_panel.h.A8951CC01B004FFA.idx  stealth_panel.cpp.94AAED4B2E4185CC.idx  stealth_panel.h.57E423EBD0F3472F.idx
MasoudyDictionary_Development/Masoudy_Dictionary/: INSTALL.txt  README.md  main.cpp  run.bat
MasoudyDictionary_Development/build_windows_simple/: main.cpp
MasoudyDictionary_Development/config/: app.cfg
MasoudyDictionary_Development/dist_windows_simple/: README.md  README_WINDOWS.md  run.bat
MasoudyDictionary_Development/docs/: Masoudy_Documentation.md  PROJECT_TREE.md  README.md  User_Guide.md
MasoudyDictionary_Development/samples/: config_sample.ini
MasoudyDictionary_Development/src/: auth_system.cpp  communication_engine.cpp  communication_engine.h  config_validator.h  error_handler.h  input_handler.cpp  login_dialog.h  main_frame.h  masoudy_app.h  masoudy_core.cpp  memory_protection.h  menu_bar.h  network_scanner_dialog.cpp  network_scanner_dialog.h  process_injector.h  screen_capture.h  screen_sharing_panel.cpp  status_bar.h  stealth_engine.cpp  stealth_engine.h  stealth_panel.h  tool_bar.cpp  tool_bar.h  windows_app.cpp
MasoudyDictionary_Development/src/auth/: auth_system.h
MasoudyDictionary_Development/src/config/: config_validator.cpp
MasoudyDictionary_Development/src/core/: error_handler.cpp  masoudy_core.h
MasoudyDictionary_Development/src/gui/: login_dialog.cpp  main.cpp  main_frame.cpp  masoudy_app.cpp  menu_bar.cpp  screen_sharing_panel.h  settings_panel.cpp  settings_panel.h  status_bar.cpp  stealth_panel.cpp
MasoudyDictionary_Development/src/input/: input_handler.h
MasoudyDictionary_Development/src/memory/: memory_protection.cpp
MasoudyDictionary_Development/src/network/: network_scanner.cpp  network_scanner.h
MasoudyDictionary_Development/src/process/: process_injector.cpp
MasoudyDictionary_Development/src/screen_sharing/: screen_capture.cpp
